--- a/style.css
+++ b/style.css
@@ -23,11 +23,38 @@ img.AGNLogo{
   height: 115px;
   margin-top: 60px;
 }
+
 div.footer{
   background-color: #EAF9FB;
   width:100%;
   height:300px;
   position:absolute;
+
+}
+
+.login{
+  margin: 50px;
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 5px;
+  border-color: #04CCE2;
+  height: 300px;
+}
+
+.login > input{
+  margin-left: 80px;
+  margin-top: 20px;
+  width: 300px;
+}
+
+.loginBtn{
+  margin-top: 50px;
+  margin-left: 130px;
+  background-color: #04CCE2;
+  height: 60px;
+  width: 200px;
+  border-radius: 8px;
+  color: white;
 }
 
 ul.ul{
