--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 div.containerplus{
   width:auto;
-  height:125px;
+  height:260px;
+  background-color: #EAF9FB;
 }
 
 img.logo{
   position:absolute;
   height:270px;
-  background-color: white;
 }
 
 img.footerLogo{
@@ -29,7 +29,6 @@ div.footer{
   width:100%;
   height:300px;
   position:absolute;
-
 }
 
 .login{
@@ -90,6 +89,7 @@ div:hover.icon{
 }
 
 img.homePage{
+  margin-top: -10px;
   height:auto;
   width:113.75%;
   margin-left: -190px;
@@ -97,13 +97,13 @@ img.homePage{
 }
 
 .navbar-custom{
-  margin-top: 145px;
+  margin-top: 5px;
   background-color: white;
 }
 
 .affix {
-    top: -145px;
-    width: 100%;
+  top: -10px;
+  width: 100%;
 }
 
 .affix + .container-fluid {
