--- a/style.css
+++ b/style.css
@@ -40,6 +40,19 @@ div.footer{
   font-family: "RockWell";
   font-weight: bold;
   margin-bottom: 30px;
+  color: #00383e;
+}
+
+.register{
+  height: 550px;
+  margin: 100px;
+  background-color: #EAF9FB;
+  border-radius: 10px;
+}
+
+.register > input{
+  margin-top: 35px;
+  width: 600px;
 }
 
 .login{
@@ -50,32 +63,31 @@ div.footer{
 }
 
 .loginText{
-  text-align: center;
   font-weight: bold;
-  background-color: #04CCE2;
   height: 60px;
   border-radius: 10px;
   padding: 10px;
   width: 507px;
-  margin-top: 0px;
-  margin-left: -14px;
+  margin-bottom: -30px;
+  margin-left: -10px;
+  color: #00383e;
 }
 
 .login > input{
-  margin-left: 80px;
-  margin-top: 20px;
-  width: 300px;
+  margin-top: 35px;
+  width: 600px;
 }
 
 .loginBtn{
   margin-top: 50px;
   margin-left: 130px;
-  background-color: #04CCE2;
+  background-color: #FBA16C;
   height: 60px;
   width: 200px;
   border-radius: 8px;
   color: white;
   font-size:23px;
+  float: right;
 }
 
 ul.ul{
