--- a/style.css
+++ b/style.css
@@ -28,7 +28,15 @@ div.footer{
   background-color: #EAF9FB;
   width:100%;
   height:300px;
-  position:absolute;
+  float: bottom;
+}
+
+li.footerText{
+  font-family: 'RockWell';
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: -20px;
 }
 
 .line{
@@ -94,14 +102,6 @@ ul.ul{
   list-style:none;
 }
 
-li.footerText{
-  font-family: 'RockWell';
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: 20px;
-  margin-bottom: -20px;
-}
-
 div.topIcon{
   padding: 0;
   width:auto;
@@ -122,12 +122,98 @@ div:hover.icon{
   opacity: 0.7;
 }
 
-img.homePage{
-  margin-top: -10px;
-  height:auto;
-  width:113.75%;
-  margin-left: -190px;
-  padding-bottom: 30px;
+
+.homePic{
+  height: 400px;
+}
+
+.title{
+    height: 100px;
+    width: 100%;
+    font-size: 50px;
+    font-style: italic;
+    text-align: center;
+    font-family: 'RockWell';
+    font-weight: bold;
+}
+
+.aboutJinjangTitle{
+  color: #00383e;
+  font-family: 'RockWell';
+  font-size: 30px;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.aboutJinjang{
+  color: #00383e;
+  font-family: 'RockWell';
+  font-size: 18px;
+  text-align: justify;
+  line-height: 1.5;
+}
+
+.readMoreBtn{
+  background-color: transparent;
+  height: 50px;
+  width: 120px;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: #00383e;
+  color: #00383e;
+  font-size:15px;
+  font-weight: bold;
+  font-family: 'RockWell';
+  float: right;
+}
+
+.homeBar{
+  background-color: #EAF9FB;
+  margin-top: 10px;
+  height: 180px;
+  margin-bottom: 20px;
+}
+
+.homeBar2{
+  background-color: #EAF9FB;
+  margin-top: 10px;
+  height: 400px;
+  margin-bottom: 20px;
+}
+
+.homeBarfont{
+  color: #00383e;
+  font-family: 'RockWell';
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+}
+
+.homeBarBtn{
+  margin-top: 50px;
+  background-color: transparent;
+  height: 80px;
+  width: 250px;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: #00383e;
+  color: #00383e;
+  font-size:23px;
+  font-weight: bold;
+  font-family: 'RockWell';
+}
+
+.storyTitle{
+    font-size: 30px;
+    font-family: 'RockWell';
+}
+
+.story{
+  color: #00383e;
+  font-family: 'RockWell';
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: justify;
 }
 
 .navbar-custom{
