--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ img.footerLogo{
 }
 
 img.HELPLogo{
-  height: 150px;
-  margin-top: 20px;
+  height: 100px;
+  margin-top: 40px;
 }
 
 img.AGNLogo{
-  height: 115px;
-  margin-top: 60px;
+  height: 100px;
+  margin-top: 80px;
 }
 
 div.footer{
@@ -123,13 +123,12 @@ div:hover.icon{
   opacity: 0.7;
 }
 
-
 .homePic{
   height: 400px;
 }
 
 .title{
-  height: 100px;
+  height: auto;
   width: 100%;
   font-size: 50px;
   font-style: italic;
@@ -165,7 +164,6 @@ div:hover.icon{
   font-size:15px;
   font-weight: bold;
   font-family: 'RockWell';
-  float: right;
 }
 
 .homeBar{
@@ -226,7 +224,6 @@ div:hover.icon{
 
 .contact{
   margin-right: -80px;
-  margin-left: 80px;
 }
 .affix {
   top: -10px;
