--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ div.footer{
   background-color: #EAF9FB;
   width:100%;
   height: auto;
-  float: bottom;
 }
 
 li.footerText{
@@ -97,6 +96,7 @@ li.footerText{
   color: white;
   font-size:23px;
   float: right;
+  margin-bottom: 10px;
 }
 
 ul.ul{
@@ -200,6 +200,7 @@ div:hover.icon{
   font-size:23px;
   font-weight: bold;
   font-family: 'RockWell';
+  margin-bottom: 10px;
 }
 
 .storyTitle{
